--- a/css_layout_arrangement_2020_07_13/css_layout_inline, block, inline-block.html
+++ b/css_layout_arrangement_2020_07_13/css_layout_inline, block, inline-block.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css 레이아웃 inline, block, inline-block.css">
+    <link rel="stylesheet" href="css_layout_inline_block_inline-block.css">
     <title>Document</title>
 </head>
 
